<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main"
    android:orientation="vertical">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_toLeftOf="@id/btnhello"
        android:layout_alignBaseline="@id/btnhello"
        android:textSize="50sp"
        android:layout_marginEnd="-20dp"
        android:background="@color/green"
        android:padding="20dp"
        android:id="@+id/btnname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollno"
        android:textSize="50sp"
        android:padding="20dp"
        android:id="@+id/btnrollno"
        android:background="@color/green"
        android:layout_toEndOf="@id/btnhello"
        android:layout_alignBaseline="@id/btnhello"
        android:layout_marginStart="-20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:background="@color/white"
        android:textSize="40sp"
        android:id="@+id/btnhello"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OneWay"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:background="@color/orange"
        android:layout_below="@id/btnname"
        android:id="@+id/oneway"
        android:layout_marginTop="20dp"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/oneway"
        android:id="@+id/switchbutton"
        android:layout_below="@id/oneway"
        android:layout_marginTop="-60dp"
        android:background="@color/orange"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ITraveller"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_below="@id/oneway"
        android:background="@color/orange"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/spacestation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:padding="10dp"
        android:text="@string/space_station"
        android:textSize="15sp"
        android:layout_marginTop="260dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:background="@color/orange"
        android:padding="10dp"
        android:layout_alignBaseline="@id/spacestation"
        android:layout_marginStart="230dp"
        android:layout_marginBottom="374dp"
        android:text="@string/Flights"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:background="@color/orange"
        android:padding="10dp"
        android:layout_alignBaseline="@id/flights"
        android:layout_marginStart="390dp"
        android:layout_marginBottom="374dp"
        android:text="@string/Rovers"
        />

</RelativeLayout>



